--- a/SimpleNotes/Views/Base.lproj/Main.storyboard
+++ b/SimpleNotes/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="s3i-n7-A51">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -79,17 +79,17 @@
                         <outlet property="logInButton" destination="W0D-yu-Ijd" id="JhB-kD-Pkw"/>
                         <outlet property="passwordTextField" destination="dfC-6D-gP3" id="3q7-Ux-JmF"/>
                         <outlet property="warningLabel" destination="Lpa-xl-aQC" id="9bm-O9-XYg"/>
-                        <segue destination="WXW-7M-q6g" kind="show" identifier="notesSegue" id="6t8-Sz-ZGv"/>
+                        <segue destination="kku-ur-rDo" kind="show" identifier="notesSegue" id="6t8-Sz-ZGv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="942" y="74"/>
         </scene>
-        <!--Notes Table View Controller-->
+        <!--Notes-->
         <scene sceneID="nCF-TH-D1v">
             <objects>
-                <tableViewController id="WXW-7M-q6g" customClass="NotesTableViewController" customModule="SimpleNotes" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController modalPresentationStyle="fullScreen" id="WXW-7M-q6g" customClass="NotesTableViewController" customModule="SimpleNotes" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="pZZ-58-TRK">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -156,16 +156,16 @@
                             <outlet property="delegate" destination="WXW-7M-q6g" id="6R9-5D-UOn"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="HMk-Kl-dV0"/>
+                    <navigationItem key="navigationItem" title="Notes" id="HMk-Kl-dV0"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H87-69-K4D" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1902.8985507246377" y="-281.25"/>
+            <point key="canvasLocation" x="2946" y="-281"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Note-->
         <scene sceneID="Olo-uF-1K4">
             <objects>
-                <tableViewController id="V6g-4a-ohw" sceneMemberID="viewController">
+                <tableViewController modalPresentationStyle="fullScreen" id="V6g-4a-ohw" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="UTn-aD-l8i">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -197,15 +197,15 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Note" id="IXj-2W-UVE">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="690" id="XAc-5o-Rax">
-                                        <rect key="frame" x="20" y="133.5" width="374" height="690"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="622" id="XAc-5o-Rax">
+                                        <rect key="frame" x="20" y="133.5" width="374" height="622"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XAc-5o-Rax" id="jEd-Bo-3uf">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="690"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="622"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="esi-GE-Sck">
-                                                    <rect key="frame" x="20" y="11" width="334" height="657"/>
+                                                    <rect key="frame" x="20" y="11" width="334" height="589"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                     <color key="textColor" systemColor="labelColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -228,11 +228,11 @@
                             <outlet property="delegate" destination="V6g-4a-ohw" id="fB0-aq-6Za"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="IQ5-Sn-pUP"/>
+                    <navigationItem key="navigationItem" title="Note" id="IQ5-Sn-pUP"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UhA-LI-OTb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2811.594202898551" y="73.660714285714278"/>
+            <point key="canvasLocation" x="3926" y="-281"/>
         </scene>
         <!--Registration View Controller-->
         <scene sceneID="wiC-Mn-dJn">
@@ -298,7 +298,7 @@
                         <outlet property="passwordTextField" destination="jky-tv-00m" id="4Kj-Qc-T70"/>
                         <outlet property="signUpButton" destination="WmG-2f-ZRR" id="GvB-fW-Pq4"/>
                         <outlet property="warningLabel" destination="PBA-Ze-3ni" id="uWz-4t-NOt"/>
-                        <segue destination="WXW-7M-q6g" kind="show" identifier="notesSegue" id="w6b-Of-g9F"/>
+                        <segue destination="kku-ur-rDo" kind="show" identifier="notesSegue" id="w6b-Of-g9F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UNf-zF-bah" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -323,9 +323,28 @@
             </objects>
             <point key="canvasLocation" x="18.840579710144929" y="73.660714285714278"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="xAa-hv-XwJ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="kku-ur-rDo" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="9gZ-ys-HFu"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZkD-3D-ymw">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="WXW-7M-q6g" kind="relationship" relationship="rootViewController" id="92g-Wt-tcN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="962-TG-WVK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1935" y="-281"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6t8-Sz-ZGv"/>
+        <segue reference="w6b-Of-g9F"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="labelColor">
